# fltkCoin3d

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: codacy.yml  continuous-integration-workflow.yml
Duck_Coin3D_Window/: CMakeLists.txt  Duck_Coin3D_Window.cpp  Duck_Coin3D_Window.h  main.cpp
glutDuck/: CMakeLists.txt  Fltk3DCanvas.cpp  Fltk3DCanvas.h  Fltk_Coin3D_Window.cpp  Fltk_Coin3D_Window.h  main.cpp
minimal/: CMakeLists.txt  Coin3DCanvas.cpp  Coin3DCanvas.h  Fltk3DCanvas.cpp  Fltk3DCanvas.h  Fltk_Coin3D_Window.cpp  Fltk_Coin3D_Window.h  ReadMe  main.cpp
